# chains

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
assets/: chains.json  chains.schema.json
registry/: manual.json  manual.schema.json
scripts/: phf-codegen.rs  update-registry.py
scripts/templates/: generated_named.rs
src/: chain.rs  ethereum.rs  lib.rs  named.rs  registry.rs  spec.rs  verifiers.rs
